# libcity

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  LICENSE  Makefile  README  libcity.h  plan.txt
deprecated/test/: main.cpp  unit.cpp  unit.h
include/: libcity.h
src/: CMakeLists.txt  Makefile  city.cpp  city.h  debug.h  libcity.cpp  libcity.h  random.cpp  random.h  streetgraph.cpp  streetgraph.h
src/area/: area.cpp  area.h  block.cpp  block.h  lot.cpp  lot.h  region.cpp  region.h  subregion.cpp  subregion.h  zone.cpp  zone.h
src/buildings/: block.cpp  block.h
src/entities/: building.cpp  building.h  urbanentity.cpp  urbanentity.h
src/geometry/: curve.h  line.cpp  line.h  linesegment.cpp  linesegment.h  point.cpp  point.h  polygon.cpp  polygon.h  ray.cpp  ray.h  shape.cpp  shape.h  units.h  vector.cpp  vector.h
src/lsystem/: graphiclsystem.cpp  graphiclsystem.h  lsystem.cpp  lsystem.h  roadlsystem.cpp  roadlsystem.h
src/streetgraph/: areaextractor.cpp  areaextractor.h  intersection.cpp  intersection.h  minimalcyclebasis.cpp  minimalcyclebasis.h  organicroadpattern.cpp  organicroadpattern.h  path.cpp  path.h  rasterroadpattern.cpp  rasterroadpattern.h  road.h  (+5 more)
test/: Makefile  main.cpp  testAreaExtractor.cpp  testBlock.cpp  testGraphicLSystem.cpp  testLSystem.cpp  testLine.cpp  testLineSegment.cpp  testLot.cpp  testMCB.cpp  testPath.cpp  testPoint.cpp  testPolygon.cpp  testRandom.cpp  testRasterRoadPattern.cpp  testRay.cpp  testRegion.cpp  testShape.cpp  testStreetGraph.cpp  testSubRegion.cpp  testVector.cpp  testZone.cpp  unit.cpp  unit.h  unittests.cpp
(+4 files in other folders)
